# OctoPrint-BitBang

./: .gitignore  MANIFEST.in  PI_IMPLEMENTATION.md  PRIVACY.md  README.md  pyproject.toml  setup.py  version.sh
.github/workflows/: publish.yml
octoprint_bitbang/: __init__.py  __main__.py  _plugin.py  app.py  camera.py  flip_track.py  index.html  octoprint_adapter.py  pi_h264_source.py  proxy.py  usb_camera_source.py  v4l2_h264_source.py
octoprint_bitbang/static/js/: bitbang.js
octoprint_bitbang/templates/: bitbang_navbar.jinja2  bitbang_settings.jinja2  bitbang_webcam.jinja2  bitbang_wizard.jinja2
scripts/: build-proxy.sh
