[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-BitBang"
version = "0.2.6"
description = "Remote OctoPrint access with live H.264 video via BitBang WebRTC"
readme = "README.md"
license = "MIT"
authors = [{name = "Rich LeGrand", email = "rich.m.legrand@gmail.com"}]
requires-python = ">=3.10"
keywords = ["octoprint", "octoprint-plugin", "bitbang", "webrtc", "remote-access", "3d-printing", "h264", "raspberry-pi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Printing",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "bitbang>=0.1.53",
    "aiohttp>=3.8.0",
    "Pillow>=9.0.0",
    "numpy>=1.20.0",
    # aiortc/av come transitively via bitbang. aiortc<1.11 already caps av<14.
    # 32-bit (armv7l) has NO PyAV wheels at any in-range version, so av builds
    # from source against the system FFmpeg (Bookworm 5.1); av<12 lands it on the
    # FFmpeg-5 generation that compiles. aarch64 is intentionally NOT pinned: PyPI
    # ships manylinux aarch64 wheels with bundled FFmpeg for av 12-13, so pip
    # resolves to av 13.x (bundled) and ignores the system FFmpeg. Pinning aarch64
    # to av<12 would force a wheelless source build that fails on OctoPi-64.
    "aiortc<1.11",
    "av<12; platform_machine == 'armv7l'",
]

[project.scripts]
octoprint-bitbang = "octoprint_bitbang.app:main"

[project.entry-points."octoprint.plugin"]
bitbang = "octoprint_bitbang"

[project.urls]
Homepage = "https://github.com/richlegrand/OctoPrint-BitBang"
Source = "https://github.com/richlegrand/OctoPrint-BitBang"
Issues = "https://github.com/richlegrand/OctoPrint-BitBang/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["octoprint_bitbang*"]

[tool.setuptools.package-data]
octoprint_bitbang = [
    "*.html",
    "static/**/*",
    "templates/**/*",
    "bin/*",
]
